--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
 
 <!--   includes modules-->
      <modules>
-         <module>common</module>
          <module>ucenter</module>
+         <module>core</module>
      </modules>
 
 </project>
