--- a/ucenter/pom.xml
+++ b/ucenter/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>core</artifactId>
             <version>1.1.0</version>
         </dependency>
+
+<!--        add spring security-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
