--- a/ucenter/pom.xml
+++ b/ucenter/pom.xml
@@ -23,8 +23,14 @@
             <artifactId>core</artifactId>
             <version>1.1.0</version>
         </dependency>
+<!--        mysql connector-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
 
-<!--        add spring security-->
+
+        </dependency><!--        add spring security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -35,11 +41,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
-            <groupId>jakarta.validation</groupId>
-            <artifactId>jakarta.validation-api</artifactId>
-            <version>2.0.2</version>
-        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>net.minidev</groupId>-->
+<!--            <artifactId>json-smart</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
