--- a/ucenter/src/main/resources/application-dev.yml
+++ b/ucenter/src/main/resources/application-dev.yml
@@ -50,6 +50,32 @@ spring:
   web:
     resources:
       static-locations: classpath:/static/,classpath:/public/
+
+
+  data:
+    redis:
+      myredisson: |
+        singleServerConfig:
+          idleConnectionTimeout: 10000
+          connectTimeout: 10000
+          timeout: 3000
+          retryAttempts: 3
+          retryInterval: 1500
+          password: null
+          subscriptionsPerConnection: 5
+          clientName: null
+          address: "redis://127.0.0.1:6379"
+          subscriptionConnectionMinimumIdleSize: 1
+          subscriptionConnectionPoolSize: 50
+          connectionMinimumIdleSize: 24
+          connectionPoolSize: 64
+          database: 0
+          dnsMonitoringInterval: 5000
+        threads: 16
+        nettyThreads: 32
+        codec: !<org.redisson.codec.Kryo5Codec> {}
+        transportMode: "NIO" 
+
 management:
   endpoints:
     web:
